--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       <div class="projects-grid">
         <a href="https://cleanwithdna.com/blog/" target="_blank" class="project project-tile">
-          <img class="project-image" src="image/p1.jpg" alt="project" />
+          <img class="project-image" src="image/p1.JPG" alt="project" />
           <p class="project-title">
             <span class="code">&lt;</span>
             Clean With D&A
