--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </p>
         </a>
         <a href="https://scltaxservices.com/blogs/" target="_blank" class="project project-tile">
-          <img class="project-image" src="image/p2.jpg" alt="project" />
+          <img class="project-image" src="image/p2.JPG" alt="project" />
           <p class="project-title">
             <span class="code">&lt;</span>
             SCL Tax Services
@@ -85,7 +85,7 @@
           </p>
         </a>
         <a href="https://houseofmaidsllc.com/blog/" target="_blank" class="project project-tile">
-          <img class="project-image" src="image/p3.jpg" alt="project" />
+          <img class="project-image" src="image/p3.JPG" alt="project" />
           <p class="project-title">
             <span class="code">&lt;</span>
             House Of Maids
@@ -93,7 +93,7 @@
           </p>
         </a>
         <a href="https://universalmaids.com/blog/" target="_blank" class="project project-tile">
-          <img class="project-image" src="image/p4.jpg" alt="project" />
+          <img class="project-image" src="image/p4.JPG" alt="project" />
           <p class="project-title">
             <span class="code">&lt;</span>
             Universal Maids
@@ -101,7 +101,7 @@
           </p>
         </a>
         <a href="https://www.vikingconcretefloors.com/blogs/" target="_blank" class="project project-tile">
-          <img class="project-image" src="image/p5.jpg" alt="project" />
+          <img class="project-image" src="image/p5.JPG" alt="project" />
           <p class="project-title">
             <span class="code">&lt;</span>
             Viking Concrete Floors
@@ -109,7 +109,7 @@
           </p>
         </a>
         <a href="https://vvmaids.com/blog/" target="_blank" class="project project-tile">
-          <img class="project-image" src="image/p6.jpg" alt="project" />
+          <img class="project-image" src="image/p6.JPG" alt="project" />
           <p class="project-title">
             <span class="code">&lt;</span>
             VV Maids
