--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <i id="mark" class="fas fa-exclamation"></i>
                 <p></p>
             </div>
-            <p class="quote-bottom"><i class="fas fa-quote-left"></i>a content writer<i class="fas fa-quote-right"></i></p>
+            <p class="quote-bottom"><i class="fas fa-quote-left"></i>a digital marketing writer<i class="fas fa-quote-right"></i></p>
         </div>
         <img class="__heroimg" src="image/person.jpg" alt="Writer">
     </section>
